[workspace]
members = [
	"cli",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/service",
	"pallets/parachain-system",
	"pallets/xcm-handler",
	"primitives/core",
	"primitives/parachain-inherent",
	"rococo-parachains/",
	"rococo-parachains/pallets/parachain-info",
	"rococo-parachains/primitives",
	"rococo-parachains/runtime",
]

[profile.release]
panic = "unwind"
